private_server/guard/CELL-25/Q-INT/error.txt
  File "/kunden/homepages/8/d657042007/htdocs/CodeSet/private_server/guard/CELL-25/Q-INT/25-INT.py", line 6
    if answer==8:
                ^
SyntaxError: invalid syntax
